# openeo-argoworkflows

./: .env_sample  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.executor-dedl  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: main.yaml  test.yaml
.github/workflows/: build-dedl-executor.yaml  main.yaml  release.yaml
openeo_argoworkflows/: app.py  jobs.py  revise.py  tasks.py  worker.py  workflows.py
openeo_argoworkflows/api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
openeo_argoworkflows/api/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
openeo_argoworkflows/api/openeo_argoworkflows_api/: app.py  auth.py  files.py  jobs.py  settings.py  stac_collections.py  tasks.py  upgrade.py  worker.py  workflows.py
openeo_argoworkflows/api/openeo_argoworkflows_api/psql/: models.py
openeo_argoworkflows/api/openeo_argoworkflows_api/psql/alembic/: env.py
openeo_argoworkflows/api/openeo_argoworkflows_api/psql/alembic/versions/: 3a1f9e0d4b72_add_roles_to_users.py
openeo_argoworkflows/api/tests/: conftest.py  test_app.py  test_files.py  test_jobs.py  test_tasks.py
openeo_argoworkflows/api/tests/data/: fake-process-graph.json  fake-simple-pg.json
openeo_argoworkflows/executor/: Dockerfile  README.md  pyproject.toml
openeo_argoworkflows/executor/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
openeo_argoworkflows/executor/openeo_argoworkflows_executor/: cli.py  executor.py  models.py  stac.py  utils.py  utm.py
openeo_argoworkflows/executor/openeo_argoworkflows_executor/extra_processes/process_implementations/: io.py
openeo_argoworkflows/executor/openeo_argoworkflows_executor/extra_processes/specs/: __init__.py
openeo_argoworkflows/executor/openeo_argoworkflows_executor/utm_grid/: sentinel_2_index_shapefile.cpg:Zone.Identifier  sentinel_2_index_shapefile.dbf:Zone.Identifier  sentinel_2_index_shapefile.prj:Zone.Identifier  sentinel_2_index_shapefile.sbn:Zone.Identifier  sentinel_2_index_shapefile.sbx:Zone.Identifier  sentinel_2_index_shapefile.shp:Zone.Identifier  sentinel_2_index_shapefile.shx:Zone.Identifier
openeo_argoworkflows/executor/tests/: test_one.py
openeo_argoworkflows/psql/alembic/: env.py
tests/: conftest.py  test_app.py  test_jobs.py  test_tasks.py
tests/alembic/: models.py
(+2 files in other folders)
